# Gadgetron-Cardiac-Radial-Grappa

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
Basic_radial_gridding/: CMakeLists.txt  NFFT2DGadget_basic.cpp  NFFT2DGadget_basic.h  PassThroughGadget.cpp  PassThroughGadget.h  README.md  basic_radial_gridding.xml  basicradial_lib_export.h
HoloLens_send_images/: CMakeLists.txt  ImageFinishExportHoloLensGadget.cpp  ImageFinishExportHoloLensGadget.h  README.md  radial_grappa_combined_reconstruction_export_im.xml
Radial_grappa_HoloLens/: BucketToBufferDFGadget.cpp  BucketToBufferDFGadget.h  CMakeLists.txt  ComplexToFloatDFGadget.cpp  ComplexToFloatDFGadget.h  FloatToFixPointDFGadget.cpp  FloatToFixPointDFGadget.h  GrappaCombinedCoilCompressionGadget_Calibration.cpp  GrappaCombinedCoilCompressionGadget_Calibration.h  GrappaCombinedCoilCompressionGadget_Reconstruction.cpp  GrappaCombinedCoilCompressionGadget_Reconstruction.h  ImageArraySplitDFGadget.cpp  ImageArraySplitDFGadget.h  README.md  RadialGrappaCombinedCalibrationGadget.cpp  RadialGrappaCombinedCalibrationGadget.h  RadialGrappaCombinedReconstructionGadget.cpp  RadialGrappaCombinedReconstructionGadget.h  RadialGrappaCombinedReferencePrepGadget.cpp  RadialGrappaCombinedReferencePrepGadget.h  RemoveROOversamplingDFGadget.cpp  RemoveROOversamplingDFGadget.h  TileSliceGadget.cpp  TileSliceGadget.h  radial_grappa_combined_calibration.xml  radial_grappa_combined_lib_export.h  radial_grappa_combined_reconstruction.xml  radial_grappa_combined_reconstruction_timing.xml
Radial_grappa_HoloLens/radial_grappa_combined_gpu/: CMakeLists.txt  RadialGrappaCombinedReconstruction_GPUfxns.cpp  RadialGrappaCombinedReconstruction_GPUfxns.cu  RadialGrappaCombinedReconstruction_GPUfxns.h  radial_grappa_combined_gpu_lib_export.h
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
